hopefully fix for fullscreen issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,12 @@ a {
   text-decoration: none;
   color: #fff;
 }
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
 body {
   background: #212121;
 }
